cluster/apps/labmap/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: labmap-backend
  namespace: labmap
spec:
  replicas: 1
  selector:
    matchLabels:
      ocf.berkeley.edu/flux: labmap-backend
  template:
    metadata:
      labels:
        ocf.berkeley.edu/flux: labmap-backend
    spec:
      containers:
      - env: []
        image: ghcr.io/ocf/labmap2-backend:latest@sha256:366ca63403d93de78f8306b075ffc2498351159a08d9b8df2f18b0109a4d8faf # {"$imagepolicy": "flux-system:labmap-backend"}
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 6
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          timeoutSeconds: 3
        name: main
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
      dnsConfig:
        searches:
        - ocf.berkeley.edu
      dnsPolicy: ClusterFirst
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: labmap-frontend
  namespace: labmap
spec:
  replicas: 1
  selector:
    matchLabels:
      ocf.berkeley.edu/flux: labmap-frontend
  template:
    metadata:
      labels:
        ocf.berkeley.edu/flux: labmap-frontend
    spec:
      containers:
      - image: ghcr.io/ocf/labmap2-frontend:latest@sha256:393e541f19153e2ef9bd5c1529d32454a9d782ae9640f4b31cab17fe84c560c2 # {"$imagepolicy": "flux-system:labmap-frontend"}
        imagePullPolicy: IfNotPresent
        name: main
        ports:
        - containerPort: 8080
      dnsConfig:
        searches:
        - ocf.berkeley.edu
      dnsPolicy: ClusterFirst
